--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 .App {
   text-align: center;
 }
+
+.react-rotating-text-cursor {
+  animation: blinking-cursor 1s cubic-bezier(0.68, 0.01, 0.01, 0.99) 0s infinite;
+}
+
+@keyframes blinking-cursor {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
