--- a/src/pages/LearnPage/learnStyles.css
+++ b/src/pages/LearnPage/learnStyles.css
@@ -1,22 +1,22 @@
 .inter {
-  font-family: "Inter";
+  font-family: "Inter", sans-serif;
   margin-bottom: -5px;
 }
 
 .lesson-title {
-  font-family: 'DM Serif Display';
+  font-family: 'DM Serif Display', serif;
   font-size: 3rem;
 }
 
 .lesson-subtitle {
-  font-family: 'DM Serif Display';
+  font-family: 'DM Serif Display', serif;
   font-weight: 500;
   margin-bottom: 10px;
   font-size: 1.2rem;
 }
 
 .lesson-subtitle span {
-  font-family: 'DM Serif Display';
+  font-family: 'DM Serif Display', serif;
   font-size: 1rem;
 }
 
