--- a/src/pages/ContentEditor/TextEditorStyles.css
+++ b/src/pages/ContentEditor/TextEditorStyles.css
@@ -1,11 +1,27 @@
 
   .editor {
     border: 1px solid #f1f1f1;
-    padding: 5px;
     background-color: #ffffff;
     box-shadow: 0 0 5px #f1f1f1;
-    padding: 0 0 5px 0;
-    margin-bottom: 20px;
+    padding: 0px 20px 0px 20px;
+    margin: 20px 0px 20px 0px;
+  }
+
+  .contentEditor button {
+    background-color: #f1f1f1;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px 5px 10px;
+    margin: 0px 5px 0px 5px;
+    font-family: 'Inter';
+    font-size: 14px;
+    color: #414141;
+    transition: background-color 0.2s ease-in-out;
+  }
+
+  .contentEditor button:hover {
+    background-color: #e9e9e9;
+    cursor: pointer;
   }
 
   .rdw-editor-toolbar {
