--- a/src/pages/ContentEditor/TextEditorStyles.css
+++ b/src/pages/ContentEditor/TextEditorStyles.css
@@ -13,7 +13,7 @@
     border-radius: 4px;
     padding: 5px 10px 5px 10px;
     margin: 0px 5px 0px 5px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
     color: #414141;
     transition: background-color 0.2s ease-in-out;
@@ -32,7 +32,7 @@
 
   .rdw-dropdown-selectedtext {
     background-color: #f1f1f1;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: #414141;
     transition: background-color 0.2s ease-in-out;
   }
@@ -52,7 +52,7 @@
   }
 
   .rdw-option-wrapper {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: #414141;
     background-color: #f1f1f1 !important;
     transition: background-color 0.2s ease-in-out;
