--- a/src/pages/ContentEditor/components/ExerciseStyles.css
+++ b/src/pages/ContentEditor/components/ExerciseStyles.css
@@ -25,7 +25,7 @@
   border: none;
   padding: 10px;
   border-radius: 5px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   color: rgb(39, 39, 39);
   width: 100%;
 }
@@ -33,7 +33,7 @@
 .modal-body label {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
 }
 
 .modal-input:focus {
