added ms support in content editor

--- a/styles/ExerciseStyles.css
+++ b/styles/ExerciseStyles.css
@@ -16,8 +16,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  
+  width: 100%; 
+}
+
+.modal-ms-answers {
+  width: 100% !important;
 }
 
 .modal-input {
