--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,2 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600');
 @import url('https://fonts.googleapis.com/css2?&family=Inter');
+@import url('https://fonts.googleapis.com/css2?&family=Public+Sans');
+@import url('https://fonts.googleapis.com/css2?&family=DM+Sans');
