--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -2,3 +2,21 @@
 @import url('https://fonts.googleapis.com/css2?&family=Inter');
 @import url('https://fonts.googleapis.com/css2?&family=Public+Sans');
 @import url('https://fonts.googleapis.com/css2?&family=DM+Sans');
+
+@font-face {
+    font-family: 'Ambit';
+    src: url('../public/fonts/Ambit/Ambit-Regular.otf');
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'Ambit';
+    src: url('../public/fonts/Ambit/Ambit-Bold.otf');
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: 'Ambit';
+    src: url('../public/fonts/Ambit/Ambit-Semibold.otf');
+    font-weight: 600;
+}
