--- a/styles/ExerciseStyles.css
+++ b/styles/ExerciseStyles.css
@@ -114,6 +114,7 @@
 .fitb-modal-answer-field {
   display: inline-flex;
   align-items: center;
+  width: 100%
 }
 
 .fitb-modal-answer-placeholder {
@@ -123,4 +124,5 @@
 
 .fitb-modal-answer-chips-input {
   margin-inline: 10px;
+  width: 60%;
 }
