--- a/styles/ExerciseStyles.css
+++ b/styles/ExerciseStyles.css
@@ -78,7 +78,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
-  width: 100%;
+  width: calc(100% + 20px);
 }
 
 .fitb-modal-question {
