mobile responsiveness added, in progress

--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -1,5 +1,5 @@
 .markdown {
-    @apply space-y-4
+    @apply space-y-4 text-slate-900 dark:text-slate-200 text-sm sm:text-base
 }
 
 .markdown h1 {
@@ -35,7 +35,7 @@
 }
 
 .markdown code {
-    @apply bg-slate-800/10 transition-colors cursor-pointer hover:bg-slate-800/20 dark:border-none dark:bg-slate-200/10 border p-1 rounded-md text-slate-900 dark:text-white;
+    @apply bg-slate-800/10 cursor-pointer hover:bg-slate-800/20 dark:border-none dark:bg-slate-200/10 border p-1 rounded-md text-slate-900 dark:text-white;
 }
 
 .markdown pre {
@@ -55,7 +55,7 @@
 }
 
 .markdown pre code {
-    @apply bg-transparent border-none p-0 hover:bg-transparent text-slate-900 dark:text-white;
+    @apply !bg-transparent border-none p-0 hover:bg-transparent text-slate-900 dark:text-white;
 }
 
 .markdown blockquote {
