--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -5,18 +5,18 @@
 
 @font-face {
   font-family: "Ambit";
-  src: url("../assets/fonts/Ambit-Regular.otf");
+  src: url("/fonts/Ambit-Regular.otf");
   font-weight: normal;
 }
 
 @font-face {
   font-family: "Ambit";
-  src: url("../assets/fonts/Ambit-Bold.otf");
+  src: url("/fonts/Ambit-Bold.otf");
   font-weight: bold;
 }
 
 @font-face {
   font-family: "Ambit";
-  src: url("../assets/fonts/Ambit-Semibold.otf");
+  src: url("/fonts/Ambit-Semibold.otf");
   font-weight: 600;
 }
