--- a/styles/animations.css
+++ b/styles/animations.css
@@ -139,6 +139,16 @@
   animation: fadeOut 150ms ease-in;
 }
 
+.TooltipContent[data-state="open"][data-side="top"] {
+  transform-origin: bottom;
+  animation: fadeIn 150ms ease-out;
+}
+
+.TooltipContent[data-state="closed"][data-side="bottom"] {
+  transform-origin: bottom;
+  animation: fadeOut 150ms ease-in;
+}
+
 @keyframes contentShow {
   from {
     opacity: 0;
