--- a/styles/animations.css
+++ b/styles/animations.css
@@ -148,6 +148,16 @@
   animation: fadeOut 150ms ease-in;
 }
 
+.TooltipContent[data-state="open"][data-side="left"] {
+  transform-origin: right;
+  animation: fadeIn 150ms ease-out;
+}
+
+.TooltipContent[data-state="closed"][data-side="left"] {
+  transform-origin: right;
+  animation: fadeOut 150ms ease-in;
+}
+
 .TooltipContent[data-state="open"][data-side="bottom"] {
   transform-origin: top;
   animation: fadeIn 150ms ease-out;
