--- a/styles/animations.css
+++ b/styles/animations.css
@@ -177,6 +177,11 @@
   animation: fadeIn 150ms ease-out;
 }
 
+.TooltipContent[data-state="closed"][data-side="top"] {
+  transform-origin: bottom;
+  animation: fadeOut 150ms ease-in;
+}
+
 .TooltipContent[data-state="closed"][data-side="bottom"] {
   transform-origin: bottom;
   animation: fadeOut 150ms ease-in;
