--- a/styles/scrollbar.css
+++ b/styles/scrollbar.css
@@ -9,6 +9,7 @@
   *::-webkit-scrollbar{
     -webkit-appearance: none;
     width: 6px;
+    padding-right: 2px !important;
 }
 
 *::-webkit-scrollbar-track{
@@ -21,5 +22,6 @@
     border-radius: 4px;
     border: 0px solid rgba(255,255,255,0);
     background-clip: content-box;
-    background-color: #79848f3a;
+    background-color: #12243615;
+
 }
