--- a/styles/scrollbar.css
+++ b/styles/scrollbar.css
@@ -15,7 +15,8 @@
 *::-webkit-scrollbar-track{
     margin: 7px 0;
     border-radius: 0px;
-    background-color: transparent;
+    background-color: #0000000b;
+    border-left: 1px solid #ffffff1d;
 }
 
 *::-webkit-scrollbar-thumb{
@@ -23,5 +24,4 @@
     border: 0px solid rgba(255,255,255,0);
     background-clip: content-box;
     background-color: #12243615;
-
 }
