--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600");
-@import url("https://fonts.googleapis.com/css2?&family=Inter");
+@import url("https://fonts.googleapis.com/css2?&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?&family=Public+Sans");
 @import url("https://fonts.googleapis.com/css2?&family=DM+Sans:wght@400;500");
 @import url("https://fonts.cdnfonts.com/css/ambit");
